cabal-version:      3.0
name:               ppad-pbkdf
version:            0.2.2
synopsis:           A password-based key derivation function
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  A pure implementation of the password-based key derivation function PBKDF2,
  per RFC 2898.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/pbkdf.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Crypto.KDF.PBKDF
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

test-suite pbkdf-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
    Wycheproof

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      aeson
    , base
    , bytestring
    , ppad-base16
    , ppad-pbkdf
    , ppad-sha256 >= 0.3 && < 0.4
    , ppad-sha512 >= 0.2 && < 0.4
    , tasty
    , tasty-hunit
    , text

benchmark pbkdf-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , ppad-pbkdf
    , ppad-sha256 >= 0.3 && < 0.4
    , ppad-sha512 >= 0.2 && < 0.3

